# 2020_1218_experiment

./: README.md
arduino_sketches/send_sensor_value/sensor_value/: sensor_value.ino
arduino_sketches/send_sensor_value/sensor_value2/: sensor_value2.ino
arduino_sketches/send_sensor_value/sensor_value3/: sensor_value3.ino
aruco_programs/bag_aruco_pose/: CMakeLists.txt  main.cpp
aruco_programs/board_create/: CMakeLists.txt  main.cpp
aruco_programs/rs_aruco_pose/: CMakeLists.txt  calibration_params_D455.yml  rs_aruco.cpp
link_sensor_posi/least_squares_method/: CMakeLists.txt  main.cpp  main2.cpp  main3.cpp  param2.csv
save_imu_serial/serial_receive/: save.txt  serial_receive.py
save_imu_serial/serial_receive2/: serial_receive.py
save_imu_serial/serial_receive3/: serial_receive.py
